@@ -207,3 +207,28 @@ ERROR
 ((LAMBDA))
 ERROR
 
+;; CLHS 3.4.1.4.1.1
+
+((LAMBDA (&KEY X) X) :X 1 :Y 2 :ALLOW-OTHER-KEYS T)
+1
+
+((LAMBDA (&KEY X) X) :X 1 :Y 2 :ALLOW-OTHER-KEYS T :ALLOW-OTHER-KEYS NIL)
+1
+
+((LAMBDA (&KEY X) X) :X 1 :Y 2 :ALLOW-OTHER-KEYS NIL :ALLOW-OTHER-KEYS T)
+ERROR
+
+((LAMBDA (&KEY X &ALLOW-OTHER-KEYS) X) :X 1 :Y 2)
+1
+
+((LAMBDA (&KEY X &ALLOW-OTHER-KEYS) X) :X 1 :Y 2 :ALLOW-OTHER-KEYS T :ALLOW-OTHER-KEYS NIL)
+1
+
+((LAMBDA (&KEY X &ALLOW-OTHER-KEYS) X) :X 1 :Y 2 :ALLOW-OTHER-KEYS NIL :ALLOW-OTHER-KEYS T)
+1
+
+((LAMBDA (&KEY X) X) :X 1 :ALLOW-OTHER-KEYS NIL)
+1
+
+((LAMBDA (&KEY X) X) :X 1 :ALLOW-OTHER-KEYS NIL :ALLOW-OTHER-KEYS NIL)
+1
