@@ -1,3 +1,7 @@
+2001-08-04  Bruno Haible  <haible@clisp.cons.org>
+
+	* lambda.tst: Add more :ALLOW-OTHER-KEYS tests.
+
 2001-07-24  Sam Steingold  <sds@gnu.org>
 
 	* clos.tst: added a test for make-load-form
